<resources>
    <string name="app_name">todolist</string>

    <string name="addtask_name_activity">addTaskActivity</string>
    <string name="task_name_activity">task</string>
    <string name="task_activity_name_activity">taskActivity</string>
    <string name="oldtask_activity_name_activity">oldTaskActivity</string>

    <string name="done">done</string>
    <string name="delete">delete</string>

    <string name="name">Enter the title</string>
    <string name="desc">Enter the description</string>
    <string name="add">add a task</string>
    <string name="save">save</string>
    <string name="tobedone">What is to be done</string>
    <string name="date">Due date</string>
    <string name="time">Due time</string>
    <string name="notif">Notifications</string>

    <string name="action_finished">Finished</string>
    <string name="action_return">Return</string>

</resources>
