<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AddTaskActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tobedone"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/name"/>

        <EditText
            android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desc"
        android:hint="@string/desc"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="299dp">

            <ImageButton
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="34dp"
                android:background="@drawable/ic_date_range_black_24dp"
                android:minHeight="60dp"
                android:minWidth="60dp"
                android:onClick="showDatePickerDialog" />

            <TextView
                android:id="@+id/peeked_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/date"
                android:layout_marginTop="11dp"
                android:hint="@string/date"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/date"
                android:layout_marginTop="19dp"
                android:background="@drawable/ic_access_time_black_36dp"
                android:minHeight="60dp"
                android:minWidth="60dp"
                android:onClick="showTimePickerDialog" />

            <TextView
                android:id="@+id/peeked_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButton"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="11dp"
                android:hint="@string/time"
                android:textSize="25sp" />


        </RelativeLayout>

    </LinearLayout>




</LinearLayout>